<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_about"/>
    </group>
    <group>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
    </group>
</menu>