<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dce775"
    tools:context=".activity.LoginActivity"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:layout_margin="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_your_password"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="-80dp"
            android:layout_marginStart="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/we_will_send_otp_to_your_mobile_nu_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext_01"
                android:drawableStart="@drawable/phone"
                android:hint="@string/enter_mobile_number"
                android:inputType="phone"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/getotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/shape_button01"
                android:text="@string/send_otp" />
            <ProgressBar
                android:id="@+id/progress_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>




    </LinearLayout>
</ScrollView>