<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:id="@+id/llcontect"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:weightSum="6">

        <ImageView
            android:id="@id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">

            <TextView
                android:id="@+id/txtbookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/name_of_book"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameOfAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtbookName"
                android:padding="4dp"
                android:text="@string/name_of_author"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameOfAuthor"
                android:padding="4dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="@string/rating"
            android:textColor="#ffc828"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_baseline_star_rate_24" />

    </LinearLayout>
</androidx.cardview.widget.CardView>