<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_marginTop="150dp"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    tools:context=".fragments.ProfileFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageSwitcher
            android:id="@+id/imgProfile"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_centerHorizontal="true"
            android:layout_margin="6dp"
            android:text="@string/username"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/user_id"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUserEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/phone_number"
            android:textColor="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="normal" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>